--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^4.0.0",
+    "gulp-uglify": "^3.0.0",
     "run-sequence": "^2.2.0"
   },
   "scripts": {
